--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -1,1 +1,9 @@
-$marginViewport: 30px;
+
+//Colors
+$titleColor : #000000;
+$tileSeconday: #2D2A2B;
+$textColor: #6D6E71;
+
+
+$marginViewport: 40px;
+$cntSmall: 1000px;
