--- a/src/app.scss
+++ b/src/app.scss
@@ -3,3 +3,11 @@
 @import "Partials/header";
 @import "Partials/footer";
 
+
+.banner {
+  margin-top: 100px;
+}
+
+.cnt-small h1 {
+  margin-right: 50px;
+}
