--- a/src/Partials/_common.scss
+++ b/src/Partials/_common.scss
@@ -4,3 +4,37 @@
   box-sizing: border-box;
 }
 
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+main {
+  height: calc(100% - 80px);
+  padding-top: 80px;
+
+}
+
+ul li {
+  list-style: none;
+  & a {
+    text-decoration: none;
+    
+  }
+
+}
+
+.cnt-small {
+  max-width: $cntSmall;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+   & h1 {
+    font-size: 50px;
+    color: $titleColor;
+  }
+  & .main--text {
+    color:$textColor;
+  }
+}
