--- a/src/Partials/_common.scss
+++ b/src/Partials/_common.scss
@@ -33,10 +33,13 @@ ul li {
    & h1 {
     font-size: $mainTitle;
     color: $titleColor;
+    width: 50%;
   }
   & .main--text {
     color:$textColor;
     font-size: $parFont;
     font-weight: 300;
+    margin-top: 100px;
+    width: 50%;
   }
 }
