Griglia di immagini
Aggiunta alla prima sezione

--- a/src/Partials/_common.scss
+++ b/src/Partials/_common.scss
@@ -30,16 +30,19 @@ ul li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-   & h1 {
-    font-size: $mainTitle;
-    color: $titleColor;
-    width: 50%;
-  }
+  flex-wrap: wrap;
+
   & .main--text {
     color:$textColor;
     font-size: $parFont;
     font-weight: 300;
-    margin-top: 100px;
-    width: 50%;
   }
+}
+
+.images__container {
+  height: 400px;
+  margin-top: 150px;
+   & img {
+    height: 100%;
+   }
 }
