--- a/src/app.scss
+++ b/src/app.scss
@@ -10,15 +10,42 @@
 }
 
 
-.cnt-big {
+.bg-img__titles {
   background-image: url('../img/h2-background-img-02.png');
   height: 100%;
   background-size: 90%;
   background-position: 1% 0;
 
 }
-.cnt-small h1 {
-  margin-right: 30px;
-  height: 100%;
-  margin-top: 100px;
+.cnt-title {
+  width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+   & h1 {
+    width: 40%;
+    font-size: $mainTitle;
+    
+   }
+
+   & .main--text {
+      width: 60%;
+      font-size: $parFont ;
+      padding-left: 80px;
+      color: $textColor;
+   }
+}
+
+
+.images__container {
+  width: 100%;
+  height: 500px;
+  background: red;
+  background-image: url('../img/h2-background-img-02\ \(1\).png');
+  background-size: contain;
+  background-position: bottom left;
+    & img {
+      width: 50%;
+      
+    }
 }
