--- a/src/app.scss
+++ b/src/app.scss
@@ -6,7 +6,6 @@
 
 .banner {
   margin-top: 50px;
-  height: 490px;
 }
 
 
@@ -15,13 +14,15 @@
   height: 100%;
   background-size: 90%;
   background-position: 1% 0;
-
+  background-repeat: no-repeat;
+  padding-top: 90px 0;
 }
 .cnt-title {
   width: 1200px;
   margin: 0 auto;
   display: flex;
   align-items: center;
+  padding: 90px 0;
    & h1 {
     width: 40%;
     font-size: $mainTitle;
@@ -39,13 +40,15 @@
 
 .images__container {
   width: 100%;
-  height: 500px;
-  background: red;
-  background-image: url('../img/h2-background-img-02\ \(1\).png');
-  background-size: contain;
-  background-position: bottom left;
+  height: 100%;
     & img {
       width: 50%;
       
     }
+}
+
+.images__bg {
+  background-image: url('../img/h2-background-img-02\ \(1\).png');
+  background-size: contain;
+  background-position: -305% 0;
 }
