--- a/src/app.scss
+++ b/src/app.scss
@@ -6,23 +6,23 @@
 
 .banner {
   margin-top: 50px;
+  height: 850px;
 }
 
 
 .bg-img__titles {
-  background-image: url('../img/h2-background-img-02.png');
-  height: 100%;
+  background-image: url(../img/h2-background-img-02.png);
   background-size: 90%;
-  background-position: 1% 0;
-  background-repeat: no-repeat;
-  padding-top: 90px 0;
+  background-position: 1% 80%;
+  height: 476px;
 }
+
 .cnt-title {
   width: 1200px;
   margin: 0 auto;
   display: flex;
   align-items: center;
-  padding: 90px 0;
+
    & h1 {
     width: 40%;
     font-size: $mainTitle;
@@ -41,14 +41,14 @@
 .images__container {
   width: 100%;
   height: 100%;
-    & img {
-      width: 50%;
-      
-    }
 }
 
 .images__bg {
   background-image: url('../img/h2-background-img-02\ \(1\).png');
   background-size: contain;
   background-position: -305% 0;
+}
+
+.pictures-kids {
+  height: 500px;
 }
