effetto di piega nelle immagini

--- a/src/Partials/_common.scss
+++ b/src/Partials/_common.scss
@@ -43,55 +43,66 @@ ul li {
     width: 50%;
     & img {
       max-width: 100%;
+      max-height: 100%;
     }
   }
 
 
+
+
+
+
 .overlay {
-  height: 200px;
-  width: 200px;
-  background: #ffff;
-  opacity: 1;
-  z-index: 3;
+  width: 0;
   position: absolute;
+  border: solid;
+  border-color: transparent; 
   top: 0;
   left: 0;
-    &:hover {
-      opacity: 1;
-    }
-}
-  // freccia in su per le sezioni
-.arrow-up {
-  width: 0; 
-  height: 0; 
-  border-left: 50px solid transparent;
-  border-right: 50px solid transparent;
-  border-bottom: 50px solid #F6C0AB;
-  color: orangered;
-  position: absolute;
-  right: 20px;
-  top: 50%;
-   &::before {
-    font-family: "Font Awesome 5 Free"; 
-    font-weight: 700; 
-    font-size: 0.8em;
-    content: "\f077";
-    color: #ffff;
-    position: absolute;
-    top: 25px;
-    right: -6px;
+  transition: 0.8s border-width ease-out;
+  &:hover {
+    border-width: 100px;
+    border-radius: 0;
+    border-color: #ffff #FDE4D7 #FDE4D7 #ffff; 
+    background: #ffff;
    }
 }
 
-.arrow-placeholder {
- width: 0;
-    height: 0;
-    border-left: 140px solid transparent;
-    border-right: 144px solid transparent;
-    border-bottom: 140px solid #F6C0AB;
-    transform: rotate(135deg);
-    color: orangered;
-    position: absolute;
-    bottom: -22px;
-    right: -91px;
+.diagonal {
+  background: red;
+  width: 100%;
+} 
+.overlay__title {
+  font-size: $overlayTitle;
+  font-weight: 700;
+  
 }
+
+.overlay__text {
+  color: $textColor;
+  font-size:$overlayText;
+  transform: rotate(-90deg);
+}
+ 
+// freccia in su per le sezioni
+// .arrow-up {
+//   width: 0; 
+//   height: 0; 
+//   border-left: 50px solid transparent;
+//   border-right: 50px solid transparent;
+//   border-bottom: 50px solid #F6C0AB;
+//   color: orangered;
+//   position: absolute;
+//   right: 20px;
+//   top: 50%;
+//     &::before {
+//       font-family: "Font Awesome 5 Free"; 
+//       font-weight: 700; 
+//       font-size: 0.8em;
+//       content: "\f077";
+//       color: #ffff;
+//       position: absolute;
+//       top: 25px;
+//       right: -6px;
+//     }
+// }
