--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -3,19 +3,38 @@
 $titleColor : #000000;
 $tileSeconday: #2D2A2B;
 $textColor: #6D6E71;
+$btnBorder: #80ABAE;
+$btnHoverColor:#ffff;
 
 
 $marginViewport: 40px;
 $cntSmall: 1033px;
 
 //fonts 
-
+$fontFamilyMain: 'Poppins', sans-serif;
+$fontFamilySecondary: 'Karma', serif;
 $mainTitle: 45px;
 $parFont: 18px;
+$secondaryTitle: 45px;
 
 $sectionHeight: 500px;
 
 //overlay
 
-$overlayText: 10px;
+$overlayText: 12px;
 $overlayTitle: 20px;
+
+//button 
+
+@mixin button-features {
+  background: transparent;
+  width: 200px;
+  padding: 20px 0;
+  border: none;
+  border: 2px solid#80ABAE;
+  border-radius: 50px;
+  font-family: $fontFamilyMain;
+  font-size: 16px;
+  font-weight: 600;
+}
+
