--- a/src/app.scss
+++ b/src/app.scss
@@ -81,6 +81,24 @@
   padding-right: 1px;
     & img {
       margin-right: 10px;
-    }
+    } 
       
+}
+#video {
+  margin-bottom: 200px;
+  padding: 0 60px;
+}
+#video .cnt-big {
+  max-width: 100%;
+  height: 600px;
+  background-image: url('../img/h2-img-2.jpg');
+  background-attachment: fixed ;
+  background-repeat: no-repeat;
+  position: relative;
+    & img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
 }
