--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -1,23 +1,23 @@
 
 //Colors
 $titleColor : #000000;
-$tileSeconday: #2D2A2B;
+$tileSecondary: #2D2A2B;
 $textColor: #6D6E71;
 $btnBorder: #80ABAE;
 $btnHoverColor:#ffff;
-
-
+$boxBorder: #F1BBAA;
 $marginViewport: 40px;
 $cntSmall: 1100px;
+$centralCard:#E6F3F0;
 
 //fonts 
 $fontFamilyMain: 'Poppins', sans-serif;
 $fontFamilySecondary: 'Karma', serif;
-$mainTitle: 45px;
+$mainTitle: 50px;
 $parFont: 18px;
-$secondaryTitle: 45px;
-
+$secondaryTitle: 50px;
 $sectionHeight: 500px;
+$fontTitleSecondary: 20px;
 
 //overlay
 
@@ -29,12 +29,22 @@ $overlayTitle: 20px;
 @mixin button-features {
   background: transparent;
   width: 200px;
-  padding: 20px 0;
+  padding: 15px 0;
   border: none;
   border: 2px solid#80ABAE;
   border-radius: 50px;
   font-family: $fontFamilyMain;
   font-size: 16px;
   font-weight: 600;
+  cursor: pointer;
 }
 
+ @mixin input-text-features {
+    border: none;
+    border-bottom: 2px solid black;
+    padding: 15px 2px;
+    font-family: $fontFamilySecondary;
+    font-size: $parFont;
+    outline: none;
+    color:$textColor
+}
