--- a/src/app.scss
+++ b/src/app.scss
@@ -71,11 +71,11 @@
 }
 
 .cnt-sevices {
-  width: 60%;
+  width: 55%;
   height: 500px;
   display: flex;
   flex-wrap: wrap;
-  margin-left: 5%;
+  margin-left: 10%;
   background: white;
   padding-top: 50px;
 }
@@ -105,12 +105,12 @@
 }
 
 #video {
-  margin-bottom: 200px;
+  margin-bottom: 100px;
   padding: 0 60px;
 }
 #video .cnt-big {
   max-width: 100%;
-  height: 600px;
+  height: 800px;
   background-image: url('../img/h2-img-2.jpg');
   background-attachment: fixed ;
   background-repeat: no-repeat;
@@ -121,4 +121,69 @@
       left: 50%;
       transform: translate(-50%, -50%);
     }
+}
+#cards {
+  height: 900px;
+  background-image: url('../img/h2-background-img-03.png');
+  background-position: 100% 65%;
+  padding: 100px 0;
+}
+.card {
+  text-align: center;
+  width: 30%;
+  height: 600px;
+  border: 2px solid $boxBorder;
+  border-radius: 30px;
+  padding: 86px 0;
+    & ul {
+      margin: 30px 0;
+      & li {
+        padding: 1% 0;
+      }
+    }
+}
+
+.card:nth-child(2n) {
+  background:$centralCard;
+  border: none;
+
+}
+
+.prize--item {
+  font-size: 50px;
+  font-weight: 700;
+  font-family: $fontFamilyMain;
+}
+
+
+#get-in-touch {
+  margin: 150px 0;
+}
+.comment__input {
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+.data__input {
+  width: 40%;
+  margin-right: 40px;
+}
+
+.touch__input {
+  @include input-text-features;
+}
+
+.get-in-touch__text {
+  width: 40%;
+  margin-left: 10px;
+    & p {
+      margin-top: 30px;
+    }
+}
+
+.get-in-touch__form {
+  width: 50%;
+}
+#submit {
+ padding-top: 40px;
 }
