Aggiunta dinamica dei link social con vue

--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -9,6 +9,9 @@ $boxBorder: #F1BBAA;
 $marginViewport: 40px;
 $cntSmall: 1100px;
 $centralCard:#E6F3F0;
+$instagramColor:#69A9AA;
+$instagramColorHover: #629C7C;
+
 
 //fonts 
 $fontFamilyMain: 'Poppins', sans-serif;
