--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -11,7 +11,7 @@ $cntSmall: 1100px;
 $centralCard:#E6F3F0;
 $instagramColor:#69A9AA;
 $instagramColorHover: #629C7C;
-
+$listBorder: #E19074;
 
 //fonts 
 $fontFamilyMain: 'Poppins', sans-serif;
