--- a/src/app.scss
+++ b/src/app.scss
@@ -34,6 +34,7 @@
       width: 60%;
       font-size: $parFont ;
       padding-left: 80px;
+      padding-right: 30px;
       color: $textColor;
       font-size: $parFont;
    }
@@ -77,7 +78,6 @@
   display: flex;
   flex-wrap: wrap;
   margin-left: 10%;
-  background: white;
   padding-top: 50px;
 }
 
@@ -217,45 +217,3 @@
     }
 }
 
-.icons-sticky {
-  position: sticky;
-  width: 100%;
-}
-
-.icons__cnt {
-  height: 100px;
-  width: 100px;
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  right: 0;
-  bottom: 100px;
-  
-    & a {
-      height: 45%;
-      width: 45%;
-      position: relative;
-      
-    }
-}
-#circle {
-  background: #EE2852;
-    & img {
-    position: absolute;
-      height: 25px;
-      top:50%;
-      left:50%;
-      transform: translate(-50%, -50%);
-    }
-}
-
-#shop {
-  background:#fff;
-     & img {
-    position: absolute;
-      height: 25px;
-      top:50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-}
