--- a/src/Partials/_footer.scss
+++ b/src/Partials/_footer.scss
@@ -82,43 +82,26 @@ footer {
 }
 
 
-
-.icons-sticky {
-  height: 100px;
-  width: 50px;
-  margin-left: 100px;
-  position: sticky;
-  left: 96%;
-  bottom: 200px;
-}
-
-#circle {
-  margin-bottom: 10px;
-  background-color: red;
-}
-
-#shop {
-  background-color: white;
-  box-shadow: 1px 1px 1px 1px  rgba($color: #000000, $alpha: 0.1);
-}
-
-.btn-icon {
-  border: none;
-  width: 100%;
-  height: 50px;
-  outline: none;
-  cursor: pointer;
-    & img {
-      height: 40px;
-      padding: 5px;
+// freccia in su del footer
+.arrow-up {
+  width: 0; 
+  height: 0; 
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-bottom: 50px solid #F6C0AB;
+  color: orangered;
+  position: absolute;
+  z-index: 1000;
+  bottom: 30px;
+  right: 30px;
+    &::before {
+      font-family: "Font Awesome 5 Free"; 
+      font-weight: 700; 
+      font-size: 0.8em;
+      content: "\f077";
+      color: #ffff;
+      position: absolute;
+      bottom: -38px;
+      right: -6px;
     }
-}
-
-.sticky-social {
-  height: 200px;
-  position: sticky;
-  left: 96%;
-  bottom: 700px;
-  z-index: 100;
-  margin-bottom: 100px;
 }
