Correzione del nome di alcune variabili

--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -1,12 +1,11 @@
 
 //Colors
 $titleColor : #000000;
-$titleSecondary:#1A706A;
+$titleColorSecondary:#1A706A;
 $textColor: #6D6E71;
 $btnBorder: #80ABAE;
 $btnHoverColor:#ffff;
 $boxBorder: #F1BBAA;
-$marginViewport: 40px;
 $cntSmall: 1100px;
 $centralCard:#E6F3F0;
 $instagramColor:#69A9AA;
@@ -23,8 +22,8 @@ $secondaryTitle: 50px;
 $sectionHeight: 500px;
 $fontTitleSecondary: 20px;
 
-//overlay
 
+//Overlay
 $overlayText: 12px;
 $overlayTitle: 20px;
 
