--- a/src/Partials/_common.scss
+++ b/src/Partials/_common.scss
@@ -6,17 +6,21 @@
 
 main {
   padding-top: 80px;
-
 }
 
 h1 {
   font-family: $fontFamilyMain;
 }
+
 h2 {
   font-family: $fontFamilyMain;
-  color: $titleSecondary;
+  color: $titleColorSecondary;
+  font-size: $secondaryTitle;
 }
+
 h3 {
+  color: $titleColorSecondary;
+  font-size: $fontTitleSecondary;
   font-family: $fontFamilyMain;
 }
 p {
@@ -33,15 +37,6 @@ ul li {
     font-weight: 700px;
   }
 }
-
-h2 {
-  color: $mainTitle;
-  font-size: $secondaryTitle;
-}
-h3 {
-  color: $titleColor;
-  font-size: $fontTitleSecondary;
-}
 .cnt-small {
   max-width: $cntSmall;
   margin: 0 auto;
@@ -57,15 +52,16 @@ h3 {
   }
 }
 
- .image {
-    position: relative;
-    width: 50%;
+.image {
+  position: relative;
+  width: 50%;
     & img {
       max-width: 100%;
       max-height: 100%;
     }
   }
-// effetto piega delle immagini
+
+// Effetto piega delle immagini
 .overlay {
   width: 0;
   position: absolute;
