--- a/src/Partials/_footer.scss
+++ b/src/Partials/_footer.scss
@@ -21,6 +21,8 @@ footer {
   transform: translate(-50%, -50%);
 }
 
+
+// stile delle icone social
 .social__list {
   display: flex;
   align-items: center;
@@ -82,7 +84,7 @@ footer {
 }
 
 
-// freccia in su del footer
+// ancorina a freccia del footer
 .arrow-up {
   width: 0; 
   height: 0; 
