--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -12,6 +12,7 @@ $instagramColor:#69A9AA;
 $instagramColorHover: #629C7C;
 $listBorder: #E19074;
 $iconSticky: #EF2853;
+$overlayColor: #FDE4D7;
 
 //fonts 
 $fontFamilyMain: 'Poppins', sans-serif;
