Aggiunte iconcine aside dei social

--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -12,7 +12,10 @@ $instagramColor:#69A9AA;
 $instagramColorHover: #629C7C;
 $listBorder: #E19074;
 $iconSticky: #EF2853;
+$iconStickyShop: #fff;
 $overlayColor: #FDE4D7;
+
+$marginViewport: 30px;
 
 //fonts 
 $fontFamilyMain: 'Poppins', sans-serif;
