Iconcine social sticky

--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -15,7 +15,12 @@ $iconSticky: #EF2853;
 $iconStickyShop: #fff;
 $overlayColor: #FDE4D7;
 
+//general
 $marginViewport: 30px;
+$sectionHeight: 500px;
+$videoSectionHeight: 800px;
+$cardSectionHeight: 900px;
+$prizeItem: 50px;
 
 //fonts 
 $fontFamilyMain: 'Poppins', sans-serif;
@@ -23,7 +28,6 @@ $fontFamilySecondary: 'Karma', serif;
 $mainTitle: 50px;
 $parFont: 18px;
 $secondaryTitle: 50px;
-$sectionHeight: 500px;
 $fontTitleSecondary: 20px;
 
 
