--- a/src/Partials/_variables.scss
+++ b/src/Partials/_variables.scss
@@ -9,13 +9,16 @@ $boxBorder: #F1BBAA;
 $cntSmall: 1100px;
 $centralCard:#E6F3F0;
 $instagramColor:#69A9AA;
-$instagramColorHover: #629C7C;
+$facebookColor: #F7D293;
+$twitterColor:#F7BCA8;
+$pinterestColor:#D8D597;
+$socialColorHover: #E1B263;
 $listBorder: #E19074;
 $iconSticky: #EF2853;
 $iconStickyShop: #fff;
 $overlayColor: #FDE4D7;
 
-//general
+//General
 $marginViewport: 30px;
 $sectionHeight: 500px;
 $videoSectionHeight: 800px;
